Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-27 (SVN):
    * strlcat.c, strlcpy.c: Removed the arch_def.h includes.

2011-12-27 (SVN):
    * Makefiles update: passing the libraries to linker before passing
      the object list is a bad idea.

2011-12-27 (SVN):
    * pr_edict.c (ED_LoadFromFile): Remove error when neither coop nor
      deathmatch was set in h2ded builds, rely on server admin's skills.

2011-12-27 (SVN):
    * Removed old QIP code that prevented coop and deathmatch to be set
      at the same time.  I was notified that it may actually cause some
      compatibility issues.  Just made sure that coop and deathmatch are
      cleared when starting a game from the menu system.

2011-12-27 (SVN):
    * common.c (COM_StripExtension): If the input is empty, just write a
      0 to the output and return.
    * quakedef.h: updated beta date stamp to 2011-12-27.

2011-12-25 (SVN):
    * view.c (V_UpdatePalette): Make use of CVAR_CHANGED flag of v_gamma.

2011-12-25 (SVN):
    * snd_dma.c: Use a callback with sfxvolume and drop the CVAR_CHANGED
      checks.

2011-12-25 (SVN):
    * screen.c, gl_screen.c: Use a callback with scr_fov and scr_viewsize
      and drop the CVAR_CHANGED checks.

2011-12-25 (SVN):
    * screen.c, gl_screen.c: Moved clearing of CVAR_CHANGED flag from
      scr_fov and scr_viewsize to SCR_CalcRefdef().

2011-12-25 (SVN):
    * snd_dma.c: Removed oldvolume global. Relying on CVAR_CHANGED flag
      of sfxvolume now.

2011-12-25 (SVN):
    * screen.c, gl_screen.c: Removed oldfov and oldscreensize globals.
      SCR_SizeUp_f and SCR_SizeDown_f no longer set vid.recalc_refdef.
      Relying on CVAR_CHANGED flags of scr_fov and scr_viewsize now.

2011-12-25 (SVN):
    * menu.c: Do not directly manipulate cvars' values, use automatic
      variables instead.
    * quakedef.h: updated beta date stamp to 2011-12-25.

2011-12-24 (SVN):